welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:12: error: Unmatched closing brace '}' ignored here
 }
 ^SlugSnail:14: error: identifier expected but string literal found.
def isFacingTrail("c" : String):Boolean = {
                  ^SlugSnail:35: error: ':' expected but '}' found.
}
^